--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,12 +5,12 @@ services:
     restart: always
     image: "postgres:15-alpine"
     environment:
-      - POSTGRES_USER = user
-      - POSTGRES_PASSWORD = pass
-      - POSTGRES_DB = our
-      - PORT = 1234
+      - POSTGRES_USER=user
+      - POSTGRES_PASSWORD=pass
+      - POSTGRES_DB=our
+      - PORT=1234
     volumes:
-      - data/var/lib/postgresql/data
+      - data:/var/lib/postgresql/data
     ports:
       - "1234:5432"
 volumes:
